Fix Admin Header Alignment

--- a/app/assets/stylesheets/survey_modules/form.styl
+++ b/app/assets/stylesheets/survey_modules/form.styl
@@ -105,6 +105,9 @@ form:focus
   overflow hidden
   padding-top 1em
 
+.surveys__admin-header .form__actions
+  padding-top 0
+
 .form__actions.danger
   a
     color warning
